# IActufoot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
actufoot/: config.py  footmercato.py  main.py  store.py  summarizer.py  telegram.py  utils.py
